# OMZ-Lab3

./: cabal.project
OMZ-Lab3/: CHANGELOG.md  OMZ-Lab3.cabal
OMZ-Lab3/app/: App.hs  Filters.hs  Main.hs
dicom/: dicom.cabal
dicom/src/Data/DICOM/: Object.hs  Pretty.hs  Tag.hs
